--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
+            pip install codecov
 
       - save_cache:
           paths:
@@ -44,7 +45,14 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python -m pytest
+            coverage run --module pytest
+
+      # report coverage
+      - run:
+          name: report coverage
+          command: |
+            . venv/bin/activate
+            codecov
 
       - store_artifacts:
           path: test-reports
