--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,14 @@ jobs:
             pip install flake8
             flake8
 
+      # check security
+      - run:
+          name: bandit
+          command: |
+            . venv/bin/activate
+            pip install bandit
+            bandit
+
       - store_artifacts:
           path: test-reports
           destination: test-reports
