Exclude the test venv from flake8

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
           command: |
             . venv/bin/activate
             pip install flake8
-            flake8
+            flake8 --exclude=venv/
 
       # check security
       - run:
