Update bandit to check cwd, exclude venv

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
           command: |
             . venv/bin/activate
             pip install bandit
-            bandit
+            bandit --exclude=venv --recursive .
 
       - store_artifacts:
           path: test-reports
