--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
-            pip install codecov
+            pip install codecov flake8 bandit
 
       - save_cache:
           paths:
@@ -59,7 +59,6 @@ jobs:
           name: flake8
           command: |
             . venv/bin/activate
-            pip install flake8
             flake8 --exclude=venv/
 
       # check security
@@ -67,7 +66,6 @@ jobs:
           name: bandit
           command: |
             . venv/bin/activate
-            pip install bandit
             bandit --exclude=venv/,tests/ --recursive .
 
       - store_artifacts:
